--- a/src/app/modules/main/content/components/admin/child-components/members/member-profile/member-profile.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/members/member-profile/member-profile.component.html
@@ -1,142 +1,154 @@
-<div class="w-full px-4">
-    <div class="w-full my-2 p-4">
-        <!-- Back to Members list Navigation-->
-        <div class="" style="width: fit-content">
-            <a class=""  [routerLink]="['../../']">
-                <div class="flex items-center hover:text-blue-500">
-                    <mat-icon class="text-base -ml-1 -mr-1">keyboard_arrow_left</mat-icon>Back
-                </div>
-            </a>
-        </div>
-    </div>
+<div class="w-full flex flex-wrap items-start px-4">
 
-    <!-- View Memeber Content -->
-    <div class="w-full px-4 pb-12">
-        <!-- Member Name & Description. -->
-        <div class="w-full flex items-center justify-between">
-            <div class="w-10/12 flex items-start">
-                <span class="p-4 bg-yellow-600 font-bold text-white rounded-full border-4 border-gray-200">SD</span>
-                <div class="ml-4">
-                    <div class="text-2xl">Sagar Desai</div>
-                    <div class="text-gray-500 mt-1">Front-end Developer</div>
-                </div>
-            </div>
-            <div class="2/12">
-                <button mat-stroked-button class="text-xs">
-                    <mat-icon class="text-sm mt-1 mr-1 -ml-2">edit</mat-icon> Edit
-                </button>
-            </div>
+    <!-- Lists -->
+    <div class="w-full p-3">
+      <div class="w-full border border-gray-200 rounded-md my-4">
+        <!-- Bread Crumbs -->
+        <div class="w-full px-4 pt-4">
+          <div class="text-blue-500 text-xs">
+            <span class="cursor-pointer hover:font-bold hover:text-blue-800" [routerLink]="['../../']">Admin > </span>
+            <span class="cursor-pointer hover:font-bold hover:text-blue-800" [routerLink]="['../']">Members & Invites > </span>
+            <span class="text-gray-500">Member's Profile</span>
+          </div>
         </div>
 
+        <!-- Profile Content -->
+        <div class="w-full mt-6">
         
-
-        <div class="w-full py-6">
-            <mat-tab-group class=" border border-gray-200 rounded-md" mat-align-tabs="start">
-
-                <!-- About Tab -->
-                <mat-tab label="About">
-                    <!-- Member About -->
-                    <div class="w-full p-4 flex flex-wrap">
-                        <div class="w-full text-gray-800 p-4">I'm Software Developer, specialized majorly on UI development, designing, creating, and maintaining software application.</div>
-                        <div class="m-4 border border-gray-200 rounded-md w-4/12">
-                            <div class="flex justify-between p-4 border-b border-gray-200">
-                                <div class="text-gray-500">Title</div>
-                                <div class="">Front-end Developer</div>
-                            </div>
-                            <div class="flex justify-between p-4 border-b border-gray-200">
-                                <div class="text-gray-500">Email</div>
-                                <div class="">sagardesai@email.com</div>
-                            </div>
-                            <div class="flex justify-between p-4 border-b border-gray-200">
-                                <div class="text-gray-500">Team</div>
-                                <div class="">Team Name</div>
-                            </div>
-                            <div class="flex justify-between p-4">
-                                <div class="text-gray-500">Role</div>
-                                <div class="">Member</div>
-                            </div>
+            <!-- View Memeber Content -->
+            <div class="w-full px-4 pb-12">
+                <!-- Member Name & Description. -->
+                <div class="w-full flex items-center justify-between">
+                    <div class="w-10/12 flex items-start">
+                        <span class="p-4 bg-yellow-600 font-bold text-white rounded-full border-4 border-gray-200">SD</span>
+                        <div class="ml-4">
+                            <div class="text-2xl">Sagar Desai</div>
+                            <div class="text-gray-500 mt-1">Front-end Developer</div>
                         </div>
                     </div>
-                </mat-tab>
-
-                <!-- Projects Tab -->
-                <mat-tab label="Projects">
-                    <!-- Project Contribution -->
-                    <div class="w-full p-4 border-b border-gray-200">
-                        <div class="w-full flex flex-wrap">
-                            <div class="w-3/12 p-4" *ngFor="let data of [0,1,2,3,4]">
-                                <div class="w-full border border-gray-200 rounded-md p-4 hover:border-gray-500">
-                                    <div class="text-base flex items-center">Project Name <span class="bg-gray-100 px-1 text-xs rounded-md ml-2 border border-gray-200">GL</span></div>
-                                    <div class="text-gray-500 text-xs">12 Members</div>
-                                    <div class="w-full flex justify-between items-center mt-8">
-                                        <div class="">
-                                            <div class="text-gray-500 text-xs">Manager</div>
-                                            <div class="">Sagar Desai</div>
-                                        </div>
-                                        <div class="">
-                                            <button mat-icon-button class=""  [routerLink]="['../../../', 'projects', 567]">
-                                                <mat-icon>chevron_right</mat-icon>
-                                            </button>
+                    <div class="2/12">
+                        <button mat-stroked-button class="text-xs">
+                            <mat-icon class="text-sm mt-1 mr-1 -ml-2">edit</mat-icon> Edit
+                        </button>
+                    </div>
+                </div>
+        
+                
+        
+                <div class="w-full py-6">
+                    <mat-tab-group class=" border border-gray-200 rounded-md" mat-align-tabs="start">
+        
+                        <!-- About Tab -->
+                        <mat-tab label="About">
+                            <!-- Member About -->
+                            <div class="w-full p-4 flex flex-wrap">
+                                <div class="w-full text-gray-800 p-4">I'm Software Developer, specialized majorly on UI development, designing, creating, and maintaining software application.</div>
+                                <div class="m-4 border border-gray-200 rounded-md w-4/12">
+                                    <div class="flex justify-between p-4 border-b border-gray-200">
+                                        <div class="text-gray-500">Title</div>
+                                        <div class="">Front-end Developer</div>
+                                    </div>
+                                    <div class="flex justify-between p-4 border-b border-gray-200">
+                                        <div class="text-gray-500">Email</div>
+                                        <div class="">sagardesai@email.com</div>
+                                    </div>
+                                    <div class="flex justify-between p-4 border-b border-gray-200">
+                                        <div class="text-gray-500">Team</div>
+                                        <div class="">Team Name</div>
+                                    </div>
+                                    <div class="flex justify-between p-4">
+                                        <div class="text-gray-500">Role</div>
+                                        <div class="">Member</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </mat-tab>
+        
+                        <!-- Projects Tab -->
+                        <mat-tab label="Projects">
+                            <!-- Project Contribution -->
+                            <div class="w-full p-4 border-b border-gray-200">
+                                <div class="w-full flex flex-wrap">
+                                    <div class="w-3/12 p-4" *ngFor="let data of [0,1,2,3,4]">
+                                        <div class="w-full border border-gray-200 rounded-md p-4 hover:border-gray-500">
+                                            <div class="text-base flex items-center">Project Name <span class="bg-gray-100 px-1 text-xs rounded-md ml-2 border border-gray-200">GL</span></div>
+                                            <div class="text-gray-500 text-xs">12 Members</div>
+                                            <div class="w-full flex justify-between items-center mt-8">
+                                                <div class="">
+                                                    <div class="text-gray-500 text-xs">Manager</div>
+                                                    <div class="">Sagar Desai</div>
+                                                </div>
+                                                <div class="">
+                                                    <button mat-icon-button class=""  [routerLink]="['../../../', 'projects', 567]">
+                                                        <mat-icon>chevron_right</mat-icon>
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </mat-tab>
-
-                <!-- Activity Tab -->
-                <mat-tab label="Activity">
-                    <!-- Member Activity -->
-                    <div class="w-full p-4">
-                        <div class="w-full p-4 px-6">
-                            <div class="w-full">
-                                <div class="border-l border-gray-200 p-4" *ngFor="let activity of [1,2,3,4,5]">
-                                    <div class="flex items-center">
-                                        <div class="mr-4 bg-white flex items-center p-1 rounded-full -ml-8">
-                                            <mat-icon>label</mat-icon>
+                        </mat-tab>
+        
+                        <!-- Activity Tab -->
+                        <mat-tab label="Activity">
+                            <!-- Member Activity -->
+                            <div class="w-full p-4">
+                                <div class="w-full p-4 px-6">
+                                    <div class="w-full">
+                                        <div class="border-l border-gray-200 p-4" *ngFor="let activity of [1,2,3,4,5]">
+                                            <div class="flex items-center">
+                                                <div class="mr-4 bg-white flex items-center p-1 rounded-full -ml-8">
+                                                    <mat-icon>label</mat-icon>
+                                                </div>
+                                                <div class="">
+                                                    <div class="">Activity Name</div>
+                                                    <div class="text-xs text-gray-500">Performed something on this page.</div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="">
-                                            <div class="">Activity Name</div>
-                                            <div class="text-xs text-gray-500">Performed something on this page.</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </mat-tab>
+        
+                        <!-- Settings Tab -->
+                        <mat-tab label="Settings">
+                            <div class="w-full p-4">
+                                <div class="flex justify-start w-full">
+                                    <div class="w-5/12 p-4">
+                                        <div class="w-full border border-gray-200 rounded-md p-4 flex items-center cursor-pointer hover:text-blue-500">
+                                            <div class="bg-gray-100 p-3 rounded-md flex items-center">
+                                                <mat-icon>restore</mat-icon>
+                                            </div>
+                                            <div class="ml-4">
+                                                <div class="">Change Password</div>
+                                                <div class="text-xs text-gray-500">Update your password once in every 60 days.</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="w-5/12 p-4">
+                                        <div class="w-full border border-gray-200 rounded-md p-4 flex items-center cursor-pointer hover:text-blue-500">
+                                            <div class="bg-gray-100 p-3 rounded-md flex items-center">
+                                                <mat-icon>remove_circle_outline</mat-icon>
+                                            </div>
+                                            <div class="ml-4">
+                                                <div class="">Deactivate Account</div>
+                                                <div class="text-xs text-gray-500">Restricts user from login, modifying roles and permissions.</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </mat-tab>
-
-                <!-- Settings Tab -->
-                <mat-tab label="Settings">
-                    <div class="w-full p-4">
-                        <div class="flex justify-start w-full">
-                            <div class="w-5/12 p-4">
-                                <div class="w-full border border-gray-200 rounded-md p-4 flex items-center cursor-pointer hover:text-blue-500">
-                                    <div class="bg-gray-100 p-3 rounded-md flex items-center">
-                                        <mat-icon>restore</mat-icon>
-                                    </div>
-                                    <div class="ml-4">
-                                        <div class="">Change Password</div>
-                                        <div class="text-xs text-gray-500">Update your password once in every 60 days.</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="w-5/12 p-4">
-                                <div class="w-full border border-gray-200 rounded-md p-4 flex items-center cursor-pointer hover:text-blue-500">
-                                    <div class="bg-gray-100 p-3 rounded-md flex items-center">
-                                        <mat-icon>remove_circle_outline</mat-icon>
-                                    </div>
-                                    <div class="ml-4">
-                                        <div class="">Deactivate Account</div>
-                                        <div class="text-xs text-gray-500">Restricts user from login, modifying roles and permissions.</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </mat-tab>
-            </mat-tab-group>
+                        </mat-tab>
+                    </mat-tab-group>
+                </div>
+            </div>
         </div>
+      </div>
+
+      
     </div>
+
 </div>
+
