--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -77,19 +77,19 @@
             </div>
         </div>
 
-        <!-- Release Notes -->
+        <!-- Release Comments -->
         <div class="w-full p-3 border border-gray-200 rounded-md my-4">
             <!-- Title -->
-            <div class="w-full text-lg px-2 text-gray-800">Release Notes</div>
+            <div class="w-full text-lg px-2 text-gray-800">Release Comments</div>
 
-            <!-- Notes List -->
+            <!-- Comments List -->
             <div class="w-full py-4 px-2">
-                <div class="p-3 border border-gray-200 rounded-lg bg-gray-50 mb-3" *ngFor="let note of releaseNotes">
-                    <div class="font-bold text-xs">{{note.title}}</div>
-                    <div class="py-4 text-gray-400 text-xs">{{note.description}}</div>
+                <div class="p-3 border border-gray-200 rounded-lg bg-gray-50 mb-3" *ngFor="let comment of releaseComments">
+                    <div class="font-bold text-xs">{{comment.title}}</div>
+                    <div class="py-4 text-gray-400 text-xs">{{comment.description}}</div>
                     <div class="flex justify-between">
-                        <span class="text-gray-400 text-xs">{{note.createdDate}}</span>
-                        <span class="text-gray-400 text-xs">{{note.createdBy}}</span>
+                        <span class="text-gray-400 text-xs">{{comment.createdDate}}</span>
+                        <span class="text-gray-400 text-xs">{{comment.createdBy}}</span>
                     </div>
                 </div>
             </div>
