Instances renamed as domains, minor UI Modifications.

--- a/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
+++ b/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
@@ -41,7 +41,7 @@
                     <div class="w-full mt-5">
                         <div class="w-full p-4 border border-gray-200 rounded-md">
                             <div class="flex justify-between">
-                                <div class="w-full text-lg text-gray-800">Instances</div>
+                                <div class="w-full text-lg text-gray-800">Domains</div>
                                 <button mat-icon-button class="">
                                     <mat-icon class="text-blue-500" matTooltip="Add New Instance">add_circle</mat-icon>
                                 </button>
@@ -133,7 +133,7 @@
                                 <div class="">
                                     <div class=" text-gray-800">{{release.title}}</div>
                                     <div class="text-gray-400 text-xs py-2">{{release.tag}}</div>
-                                    <div class="text-gray-400 text-xs">{{release.instance}}</div>
+                                    <div class="text-gray-400 text-xs">{{release.domain}}</div>
                                 </div>
                                 <div class="flex content-center">
                                     <div class="">
