--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <!-- Client Associations: Projects, Instances, Releases, Demos -->
+        <!-- Client Associations: Projects, Domains, Releases, Demos -->
         <div class="w-full py-6">
             <mat-tab-group class=" border border-gray-200 rounded-md" mat-align-tabs="start">
 
@@ -59,22 +59,22 @@
                     </div>
                 </mat-tab>
 
-                <!-- Instances Tab -->
-                <mat-tab label="Instances">
+                <!-- Domains Tab -->
+                <mat-tab label="Domains">
                     <div class="w-full p-4 flex flex-wrap">
-                        <div class="w-6/12 p-4" *ngFor="let instance of clientProfileData.instances">
+                        <div class="w-6/12 p-4" *ngFor="let domain of clientProfileData.domains">
                             <div class="flex justify-between items-center w-full border border-gray-200 rounded-md p-4 hover:border-gray-400">
                                 <div class="">
-                                    <span class="text-xs text-xs rounded-lg">{{instance.type}}</span>
-                                    <div class="text-blue-500 font-bold pt-4">{{instance.path}}</div>
-                                    <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: {{instance.branch}}</div>
+                                    <span class="text-xs text-xs rounded-lg">{{domain.type}}</span>
+                                    <div class="text-blue-500 font-bold pt-4">{{domain.path}}</div>
+                                    <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: {{domain.branch}}</div>
                                 </div>
                                 <div class="flex items-start">
                                     <div class="">
                                         <div class="text-right">
-                                            <span class="text-right text-xs px-3 py-0.5 rounded-full uppercase" [ngClass]="getStatusStyle(instance.status)">{{instance.status}}</span>
+                                            <span class="text-right text-xs px-3 py-0.5 rounded-full uppercase" [ngClass]="getStatusStyle(domain.status)">{{domain.status}}</span>
                                         </div>
-                                        <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Release Date: {{instance.createdDate}}</div>
+                                        <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Release Date: {{domain.createdDate}}</div>
                                     </div>
                                     <div class="ml-4">
                                         <button mat-icon-button [matMenuTriggerFor]="instanceMenu">
