--- a/src/app/modules/main/content/components/domains/domains.component.html
+++ b/src/app/modules/main/content/components/domains/domains.component.html
@@ -4,21 +4,21 @@
     <div class="w-full p-3">
         <div class="w-full p-3 border border-gray-200 rounded-md my-4">
             <!-- Title -->
-            <div class="w-full text-lg px-3 text-gray-800">Instances</div>
+            <div class="w-full text-lg px-3 text-gray-800">Domains</div>
 
             <div class="w-full flex flex-wrap mt-3">
-                <div class="w-6/12 flex justify-center p-2" *ngFor="let instance of instanceList">
+                <div class="w-6/12 flex justify-center p-2" *ngFor="let domain of domainList">
                     <div class="w-full p-4 border border-gray-200 hover:bg-gray-50 hover:border-gray-300 rounded-lg">
                         <div class="w-full flex justify-between items-center">
-                            <div class="text-gray-800 text-lg mb-2">{{instance.client}}</div>
+                            <div class="text-gray-800 text-lg mb-2">{{domain.client}}</div>
                             <a [routerLink]="['create']">
                                 <button mat-icon-button class="">
-                                    <mat-icon class="text-blue-500" matTooltip="Add New Instance">add_circle</mat-icon>
+                                    <mat-icon class="text-blue-500" matTooltip="Add New Domain">add_circle</mat-icon>
                                 </button>
                             </a>
                             
                         </div>
-                        <div class="mb-4 flex justify-between items-end border-b border-gray-100 " *ngFor="let url of instance.instances">
+                        <div class="mb-4 flex justify-between items-end border-b border-gray-100 " *ngFor="let url of domain.domains">
                             <div class="">
                                 <span class="text-xs text-xs rounded-lg">{{url.type}}</span>
                                 <div class="text-blue-500 font-bold pt-1">{{url.path}}</div>
@@ -29,13 +29,13 @@
                                     <div class="text-right">
                                         <span class="text-right text-xs px-3 rounded-full" [ngClass]="getStatusStyle(url.status)">{{url.status}}</span>
                                     </div>
-                                    <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Created On {{instance.createdDate}}</div>
+                                    <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Created On {{domain.createdDate}}</div>
                                 </div>
                                 <div class="ml-4">
-                                    <button mat-icon-button [matMenuTriggerFor]="instanceMenu">
+                                    <button mat-icon-button [matMenuTriggerFor]="domainMenu">
                                         <mat-icon class="text-gray-700">more_vert</mat-icon>
                                     </button>
-                                    <mat-menu #instanceMenu="matMenu">
+                                    <mat-menu #domainMenu="matMenu">
                                         <button mat-menu-item>Edit</button>
                                         <button mat-menu-item>Delete</button>
                                       </mat-menu>
