--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -21,7 +21,7 @@
                     <div class="">
                         <div class=" text-gray-800">{{release.title}}</div>
                         <div class="text-gray-400 text-xs py-2">{{release.tag}}</div>
-                        <div class="text-gray-400 text-xs">{{release.instance}}</div>
+                        <div class="text-gray-400 text-xs">{{release.domain}}</div>
                     </div>
                     <div class="flex content-center">
                         <div class="">
