Onboarding Page navigation to release on successful account creation, User Menu on Nav Bar added with Profile, Settings & Logout options.

--- a/src/app/modules/auth/components/onboarding/onboarding.component.html
+++ b/src/app/modules/auth/components/onboarding/onboarding.component.html
@@ -150,7 +150,7 @@
                     <div class="text-2xl mt-2 font-bold">Verified</div>
                     <div class="text-gray-500 py-2">You have successfully verified your account.</div>
                     <div class="my-6">
-                        <button mat-flat-button class="w-8/12" color="primary">Log in to your Account</button>
+                        <div class="">Navigating to dashboard in {{navCount}}...</div>
                     </div>
                 </div>
                 
