--- a/src/app/modules/main/navigation/navigation.component.html
+++ b/src/app/modules/main/navigation/navigation.component.html
@@ -13,7 +13,24 @@
             <button mat-flat-button class="text-white text-sm py-1" color="primary" (click)="navigationActions()">
                 <mat-icon class="text-base -ml-2">add</mat-icon> New
             </button>
-            <div class="rounded-full py-1 px-3 bg-yellow-100 text-yellow-700 font-bold shadow-md ml-6">S</div>
+            <div class="rounded-full py-1.5 px-3 bg-yellow-100 text-yellow-700 font-bold shadow-md ml-6 cursor-pointer" [matMenuTriggerFor]="menu">S</div>
+            <mat-menu #menu="matMenu">
+                <div class="w-60 text-gray-700">
+                    <div class="w-full border-b border-gray-200 bg-gray-100 px-4 py-2 -mt-2">
+                        <div class="text-xs text-gray-600">Logged in as</div>
+                        <div class="font-bold text-gray-800 mt-1">Sagar Desai</div>
+                    </div>
+                    <div class="w-full p-4 flex items-center cursor-pointer hover:text-blue-500">
+                        <mat-icon class="mr-2 text-base">person</mat-icon> Profile
+                    </div>
+                    <div class="w-full p-4 flex items-center cursor-pointer hover:text-blue-500">
+                        <mat-icon class="mr-2 text-base">settings</mat-icon> Settings
+                    </div>
+                    <div class="w-full p-4 flex items-center cursor-pointer hover:text-blue-500">
+                        <mat-icon class="mr-2 text-base">logout</mat-icon> Logout
+                    </div>
+                </div>
+            </mat-menu>
         </div>
     </div>
 </div>
